Fixed horizontal scrolling om mobile devices

--- a/styles.css
+++ b/styles.css
@@ -28,6 +28,8 @@ body {
   background-color: var(--clr-bg);
 
   overflow-x: hidden;
+  width: 100%;
+  max-width: 100vw;
 
 
 
